<resources>
    <string name="app_name">Calorie Tracker</string>
    <string name="title_activity_home">Calorie Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="fName">First Name</string>
    <string name="lName">Surname</string>
    <string name="email">Email Id</string>
    <string name="dob">Date of Birth</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="activityLevel">Level of Activity</string>
    <string name="stepsPerMile">Steps Per Mile</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newUser">New user? Sign up here!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signUp">Sign Up</string>

    <string name="welcomeMessage">Welcome </string>
    <string name="update">Done</string>
    <string name="menu_dailydiet">Daily Diet</string>
    <string name="title_activity_navigation_base">NavigationBase</string>
    <string name="foodCategory">Food Categories</string>
    <string name="foodItems">Food Items</string>
    <string name="quantity">Quantity</string>
    <string name="message">Daily diet added successfully.</string>
    <string name="add">Add</string>
    <string name="searchFood">Search and add new Food item to the selected category!</string>
    <string name="keyword">Search here...</string>
    <string name="steps">Your steps</string>
    <string name="menu_steps">Your Steps</string>
    <string name="listMessage">Please click on item in list to update your steps!</string>
    <string name="start">Start Service</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_report">Historical Report</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Select Date</string>
    <string name="fromDate">From Date</string>
    <string name="toDate">To Date</string>
    <string name="pie">Pie Chart</string>
    <string name="bar">Bar Chart</string>

</resources>
