<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_diet"
            android:icon="@drawable/food"
            android:title="@string/menu_dailydiet" />
        <item
            android:id="@+id/nav_steps"
            android:icon="@drawable/footsteps"
            android:title="@string/menu_steps" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/graph"
            android:title="@string/menu_report" />
    </group>


</menu>
