<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="false">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fName"/>

    <EditText
        android:id="@+id/fNameEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lName"/>

    <EditText
        android:id="@+id/lNameEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/emailEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dob"/>

    <EditText
        android:id="@+id/dobEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        />


    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"/>

    <EditText
        android:id="@+id/heightEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"/>

    <EditText
        android:id="@+id/weightEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"/>
<RadioGroup
    android:id="@+id/genderEditor"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male" />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female" />
</RadioGroup>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"/>

    <EditText
        android:id="@+id/addEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/postcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postcode"/>
    <EditText
        android:id="@+id/postcodeEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/activityLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityLevel"/>

    <EditText
        android:id="@+id/activityLevelEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activityLevelSpinner"></Spinner>

    <TextView
        android:id="@+id/stepsPerMile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stepsPerMile"/>

    <EditText
        android:id="@+id/spmEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"/>

    <EditText
        android:id="@+id/usernameEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/passwordEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createNewUser"
        android:text="@string/signUp"
        android:onClick="createNewUser"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goBack"
        android:onClick="goBack"
        android:text="Go Back"/>
</LinearLayout>
</ScrollView>