<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="619dp"
    android:layout_marginTop="40dp"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="@drawable/jog"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="200dp"
        android:textAlignment="textEnd"
        android:text="@string/welcomeMessage"
        android:id="@+id/welcome"/>
    <TextView
        android:id="@+id/time"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="55sp"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="280dp"
        android:id="@+id/date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calorieGoalView"
        android:layout_marginTop="220dp"
        android:layout_marginLeft="170dp"
        android:textAlignment="textEnd"/>

    <android.widget.TextView
        android:id="@+id/calorieGoalUpdateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="224dp"
        android:clickable="true" />


    <EditText
        android:id="@+id/calorieGoalEditor"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="224dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/updateGoal"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="270dp"
        android:text="@string/update"
        android:visibility="invisible"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startService"
        android:text="@string/start"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="250dp"/>

</RelativeLayout>
